# jury

./: .gitignore  README.md
backend/: .dockerignore  .env.template.txt  .gitignore  Dockerfile  README.md  main.py  requirements.txt
backend/core/: __init__.py  chain.py  llm.py  prompt.py
backend/models/: __init__.py  database.py  models.py
backend/routes/: __init__.py  api_keys.py  auth.py  contents.py  policies.py  rules.py
backend/schemas/: __init__.py  schemas.py
backend/utils/: api_keys.py  auth.py  quota.py
frontend/: README.md  app.js  config.js  index.html
frontend/components/auth/: AuthPage.js
frontend/components/content/: ContentFeed.js
frontend/components/policies/: PoliciesSidebar.js  RulesPanel.js
frontend/components/shared/: InfoModals.js
frontend/pages/: Dashboard.js
frontend/services/: api.js
frontend/styles/: main.css
frontend/utils/: verdict.js
sdk/: README.md  pyproject.toml
sdk/twelveangrymen/: __init__.py  _http.py  _render.py  client.py  exceptions.py  models.py  verdict.py
sdk/twelveangrymen/resources/: policies.py
